Fix forms in users management

--- a/front/src/app/components/private/admin/components/manage-users/components/manage-user/manage-user.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/manage-user/manage-user.component.html
@@ -128,7 +128,7 @@
               <label for="usuario" class="form-label">Usuario</label>
               <input type="text" id="usuario" class="form-control" formControlName="usuario" />
             </div>
-            <div class="col-md-4">
+            <!--<div class="col-md-4">
               <label for="id_rol" class="form-label">Rol</label>
               <select id="id_rol" class="form-select" formControlName="id_rol">
                 <option value="" disabled selected>Seleccione un rol...</option>
@@ -136,7 +136,7 @@
                   {{ role.nombre }}
                 </option>
               </select>
-            </div>
+            </div>-->
             <div class="col-md-8">
               <label for="id_tipo_asociado" class="form-label">Tipo de Asociado</label>
               <select id="id_tipo_asociado" class="form-select" formControlName="id_tipo_asociado">
