--- a/front/src/app/components/private/admin/components/manage-users/components/manage-admin/manage-admin.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/manage-admin/manage-admin.component.html
@@ -16,10 +16,7 @@
     "
     [rowsPerPageOptions]="[10, 25, 50]"
     [globalFilterFields]="[
-      'numeroDocumento',
-      'primerApellido',
-      'segundoNombre',
-      'primerNombre'
+      'usuario'
     ]"
     [tableStyle]="{ 'min-width': '75rem' }"
   >
@@ -31,7 +28,7 @@
           data-bs-toggle="modal"
           data-bs-target="#userModal"
         >
-          Crear Usuario
+          Crear Administrador
         </button>
         <p-iconField iconPosition="left" class="ml-auto">
           <p-inputIcon>
@@ -48,30 +45,14 @@
     </ng-template>
     <ng-template pTemplate="header">
       <tr>
-        <th style="width: 10%">No. Documento</th>
-        <th style="width: 15%">Primer Apellido</th>
-        <th style="width: 15%">Segundo Apellido</th>
-        <th style="width: 15%">Primer Nombre</th>
-        <th style="width: 15%">Segundo Nombre</th>
+        <th style="width: 10%">Usuario</th>
         <th style="width: 20%">Acciones</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-user>
       <tr>
         <td>
-          {{ user.numeroDocumento }}
-        </td>
-        <td>
-          {{ user.primerApellido }}
-        </td>
-        <td>
-          {{ user.segundoApellido }}
-        </td>
-        <td>
-          {{ user.primerNombre }}
-        </td>
-        <td>
-          {{ user.segundoNombre }}
+          {{ user.usuario }}
         </td>
         <td>
           <button
@@ -125,79 +106,6 @@
         <div class="modal-body">
           <div class="row g-3">
             <input type="hidden" formControlName="id" />
-            <div class="col-md-7">
-              <label for="idTipoDocumento" class="form-label"
-                >Tipo de Documento</label
-              >
-              <select
-                id="idTipoDocumento"
-                class="form-select"
-                formControlName="idTipoDocumento"
-              >
-                <option value="" disabled selected>
-                  Seleccione un tipo de documento...
-                </option>
-                <option
-                  *ngFor="let documentType of documentTypes"
-                  [value]="documentType.id"
-                >
-                  {{ documentType.nombre }}
-                </option>
-              </select>
-            </div>
-            <div class="col-md-5">
-              <label for="numeroDocumento" class="form-label"
-                >Número de Documento</label
-              >
-              <input
-                type="text"
-                id="numeroDocumento"
-                class="form-control"
-                formControlName="numeroDocumento"
-              />
-            </div>
-            <div class="col-md-6">
-              <label for="primerApellido" class="form-label"
-                >Primer Apellido</label
-              >
-              <input
-                type="text"
-                id="primerApellido"
-                class="form-control"
-                formControlName="primerApellido"
-              />
-            </div>
-            <div class="col-md-6">
-              <label for="segundoApellido" class="form-label"
-                >Segundo Apellido</label
-              >
-              <input
-                type="text"
-                id="segundoApellido"
-                class="form-control"
-                formControlName="segundoApellido"
-              />
-            </div>
-            <div class="col-md-6">
-              <label for="primerNombre" class="form-label">Primer Nombre</label>
-              <input
-                type="text"
-                id="primerNombre"
-                class="form-control"
-                formControlName="primerNombre"
-              />
-            </div>
-            <div class="col-md-6">
-              <label for="segundoNombre" class="form-label"
-                >Segundo Nombre</label
-              >
-              <input
-                type="text"
-                id="segundoNombre"
-                class="form-control"
-                formControlName="segundoNombre"
-              />
-            </div>
             <div class="col-md-8">
               <label for="usuario" class="form-label">Usuario</label>
               <input
@@ -207,34 +115,16 @@
                 formControlName="usuario"
               />
             </div>
-            <div class="col-md-4">
-              <label for="id_rol" class="form-label">Rol</label>
-              <select id="id_rol" class="form-select" formControlName="id_rol">
-                <option value="" disabled selected>Seleccione un rol...</option>
-                <option *ngFor="let role of roles" [value]="role.id">
-                  {{ role.nombre }}
-                </option>
-              </select>
-            </div>
-            <div class="col-md-8">
-              <label for="id_tipo_asociado" class="form-label"
-                >Tipo de Asociado</label
+            <div class="col-md-6">
+              <label for="contrasenia" class="form-label"
+                >Contraseña</label
               >
-              <select
-                id="id_tipo_asociado"
-                class="form-select"
-                formControlName="id_tipo_asociado"
-              >
-                <option value="" disabled selected>
-                  Seleccione un tipo de asociado...
-                </option>
-                <option
-                  *ngFor="let associateType of associatesTypes"
-                  [value]="associateType.id"
-                >
-                  {{ associateType.nombre }}
-                </option>
-              </select>
+              <input
+                type="text"
+                id="contrasenia"
+                class="form-control"
+                formControlName="contrasenia"
+              />
             </div>
             <div class="col-md-4">
               <label for="activo" class="form-label">Activo</label>
