--- a/front/src/app/components/private/admin/components/manage-users/components/manage-executive/manage-executive.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/manage-executive/manage-executive.component.html
@@ -18,8 +18,9 @@
     [globalFilterFields]="[
       'numeroDocumento',
       'primerApellido',
-      'segundoNombre',
-      'primerNombre'
+      'segundoApellido',
+      'primerNombre',
+      'segundoNombre'
     ]"
     [tableStyle]="{ 'min-width': '75rem' }"
   >
@@ -31,7 +32,7 @@
           data-bs-toggle="modal"
           data-bs-target="#userModal"
         >
-          Crear Usuario
+          Crear directivo
         </button>
         <p-iconField iconPosition="left" class="ml-auto">
           <p-inputIcon>
@@ -207,7 +208,7 @@
                 formControlName="usuario"
               />
             </div>
-            <div class="col-md-4">
+            <!--<div class="col-md-4">
               <label for="id_rol" class="form-label">Rol</label>
               <select id="id_rol" class="form-select" formControlName="id_rol">
                 <option value="" disabled selected>Seleccione un rol...</option>
@@ -215,8 +216,8 @@
                   {{ role.nombre }}
                 </option>
               </select>
-            </div>
-            <div class="col-md-8">
+            </div>-->
+            <!--<div class="col-md-8">
               <label for="id_tipo_asociado" class="form-label"
                 >Tipo de Asociado</label
               >
@@ -235,7 +236,7 @@
                   {{ associateType.nombre }}
                 </option>
               </select>
-            </div>
+            </div>-->
             <div class="col-md-4">
               <label for="activo" class="form-label">Activo</label>
               <select id="activo" class="form-select" formControlName="activo">
