--- a/front/src/app/components/private/admin/components/admin-welcome/admin-welcome.component.html
+++ b/front/src/app/components/private/admin/components/admin-welcome/admin-welcome.component.html
@@ -11,7 +11,7 @@
                 <h4 class="card-header text-center">
                     Servicios de Crédito
                 </h4>
-                <div class="card-body">
+                <div class="card-body d-flex justify-content-center align-items-center">
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/credits">Ver solicitudes de crédito</a>
                 </div>
             </div>
@@ -23,7 +23,7 @@
                 <h4 class="card-header text-center">
                     Servicios de Ahorro
                 </h4>
-                <div class="card-body ">
+                <div class="card-body d-flex justify-content-center align-items-center">
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/savings">Ver solicitudes de ahorro</a>
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/savings-withdrawals">Ver solicitudes de retiro ahorro</a>
                 </div>
