Add reports page fetching files

--- a/front/src/app/components/private/executive/executive-welcome/executive-welcome.component.html
+++ b/front/src/app/components/private/executive/executive-welcome/executive-welcome.component.html
@@ -12,7 +12,7 @@
                     Informes
                 </h4>
                 <div class="card-body d-flex justify-content-center align-items-center">
-                    <a class="btn btn-primary me-2 mb-1 " routerLink="/auth/executive">Ver Informes</a>
+                    <a class="btn btn-primary me-2 mb-1 " routerLink="/auth/executive/reports">Ver Informes</a>
                 </div>
             </div>
         </div>
