Update in manage user modal

--- a/front/src/app/components/private/admin/components/manage-users/components/manage-user/manage-user.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/manage-user/manage-user.component.html
@@ -126,7 +126,7 @@
             </div>
             <div class="col-md-8">
               <label for="usuario" class="form-label">Usuario</label>
-              <input type="text" id="usuario" class="form-control" formControlName="usuario" />
+              <input type="text" id="usuario" class="form-control" placeholder="nombre.apellido" formControlName="usuario" />
             </div>
             <!--<div class="col-md-4">
               <label for="id_rol" class="form-label">Rol</label>
