--- a/front/src/app/components/private/admin/components/manage-users/manage-users.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/manage-users.component.html
@@ -1,28 +1,23 @@
 <div class="container mt-5">
-    <h1>Administración de Usuarios</h1>
-    <div class="card">
+  <h1>Administración de Usuarios</h1>
+  <div class="card">
     <div class="card-header">
       <ul class="nav nav-pills card-header-pills">
         <li class="nav-item">
-          <a
-            class="nav-link active"
-            aria-current="page"
-            routerLink="/auth/admin/manage/executive"
-            >Directivos</a
-          >
+          <a class="nav-link active" aria-current="page" routerLink="/auth/admin/manage/executive"
+            routerLinkActive="active">Directivos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/auth/admin/manage/administrator"
-            >Administradores</a
-          >
+            routerLinkActive="active">Administradores</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/auth/admin/manage/user">Usuarios</a>
+          <a class="nav-link" routerLink="/auth/admin/manage/user" routerLinkActive="active">Usuarios</a>
         </li>
       </ul>
     </div>
     <div class="card-body">
-        <router-outlet></router-outlet>
-      </div>
-  </div> 
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
