Fix some fields to components

--- a/front/src/app/components/private/admin/components/manage-users/components/manage-admin/manage-admin.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/manage-admin/manage-admin.component.html
@@ -113,6 +113,7 @@
                 id="usuario"
                 class="form-control"
                 formControlName="usuario"
+                placeholder="Escribe el usuario para iniciar sesión"
               />
             </div>
             <div class="col-md-6">
@@ -120,10 +121,11 @@
                 >Contraseña</label
               >
               <input
-                type="text"
+                type="password"
                 id="contrasenia"
                 class="form-control"
                 formControlName="contrasenia"
+                placeholder="Escribe la contraseña"
               />
             </div>
             <div class="col-md-4">
