--- a/front/src/app/components/private/admin/components/manage-users/components/manage-executive/manage-executive.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/manage-executive/manage-executive.component.html
@@ -136,7 +136,7 @@
                 formControlName="idTipoDocumento"
               >
                 <option value="" disabled selected>
-                  Seleccione un tipo de documento...
+                  Selecciona...
                 </option>
                 <option
                   *ngFor="let documentType of documentTypes"
@@ -155,6 +155,7 @@
                 id="numeroDocumento"
                 class="form-control"
                 formControlName="numeroDocumento"
+                placeholder="Escribe el No. de documento"
               />
             </div>
             <div class="col-md-6">
@@ -166,6 +167,7 @@
                 id="primerApellido"
                 class="form-control"
                 formControlName="primerApellido"
+                placeholder="Escribe el primer apellido"
               />
             </div>
             <div class="col-md-6">
@@ -177,6 +179,7 @@
                 id="segundoApellido"
                 class="form-control"
                 formControlName="segundoApellido"
+                placeholder="Escribe el segundo apellido"
               />
             </div>
             <div class="col-md-6">
@@ -186,6 +189,7 @@
                 id="primerNombre"
                 class="form-control"
                 formControlName="primerNombre"
+                placeholder="Escribe el primer nombre"
               />
             </div>
             <div class="col-md-6">
@@ -197,6 +201,7 @@
                 id="segundoNombre"
                 class="form-control"
                 formControlName="segundoNombre"
+                placeholder="Escribe el segundo nombre"
               />
             </div>
             <div class="col-md-8">
@@ -206,6 +211,7 @@
                 id="usuario"
                 class="form-control"
                 formControlName="usuario"
+                placeholder="Escribe el usuario para iniciar sesión"
               />
             </div>
             <!--<div class="col-md-4">
