--- a/front/src/app/components/private/admin/components/manage-users/components/manage-user/manage-user.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/manage-user/manage-user.component.html
@@ -106,27 +106,27 @@
             </div>
             <div class="col-md-5">
               <label for="numeroDocumento" class="form-label">Número de Documento</label>
-              <input type="text" id="numeroDocumento" class="form-control" formControlName="numeroDocumento" />
+              <input type="text" id="numeroDocumento" class="form-control" formControlName="numeroDocumento" placeholder="Escribe el No. de documento"/>
             </div>
             <div class="col-md-6">
               <label for="primerApellido" class="form-label">Primer Apellido</label>
-              <input type="text" id="primerApellido" class="form-control" formControlName="primerApellido" />
+              <input type="text" id="primerApellido" class="form-control" formControlName="primerApellido" placeholder="Escribe el primer apellido"/>
             </div>
             <div class="col-md-6">
               <label for="segundoApellido" class="form-label">Segundo Apellido</label>
-              <input type="text" id="segundoApellido" class="form-control" formControlName="segundoApellido" />
+              <input type="text" id="segundoApellido" class="form-control" formControlName="segundoApellido" placeholder="Escribe el segundo apellido"/>
             </div>
             <div class="col-md-6">
               <label for="primerNombre" class="form-label">Primer Nombre</label>
-              <input type="text" id="primerNombre" class="form-control" formControlName="primerNombre" />
+              <input type="text" id="primerNombre" class="form-control" formControlName="primerNombre" placeholder="Escribe el primer nombre"/>
             </div>
             <div class="col-md-6">
               <label for="segundoNombre" class="form-label">Segundo Nombre</label>
-              <input type="text" id="segundoNombre" class="form-control" formControlName="segundoNombre" />
+              <input type="text" id="segundoNombre" class="form-control" formControlName="segundoNombre" placeholder="Escribe el segundo nombre"/>
             </div>
             <div class="col-md-8">
               <label for="usuario" class="form-label">Usuario</label>
-              <input type="text" id="usuario" class="form-control" placeholder="nombre.apellido" formControlName="usuario" />
+              <input type="text" id="usuario" class="form-control" placeholder="nombre.apellido" formControlName="usuario"/>
             </div>
             <!--<div class="col-md-4">
               <label for="id_rol" class="form-label">Rol</label>
