--- a/front/src/app/components/private/user/request/request-credit/info-request-credit/info-request-credit.component.html
+++ b/front/src/app/components/private/user/request/request-credit/info-request-credit/info-request-credit.component.html
@@ -1,7 +1,25 @@
 <p-toast></p-toast>
-<div class="card mb-3">
-  <div class="card-body">
-    <form [formGroup]="infoForm" (ngSubmit)="onSubmit()">
+<div class="container mt-5">
+  <h1>Solicitud de Crédito</h1>
+  <p>Este es el módulo de solicitud de crédito. Primero, complete o actualice su información según sea necesario. Después de hacerlo, proceda a solicitar el crédito.</p>
+  <form [formGroup]="infoForm" (ngSubmit)="onSubmit()">
+    <div class="mt-5" *ngIf="isSectionVisible(0)">
+      <h5>Información Familiar</h5>
+      <p>Por favor, agregue o asegúrese de tener agregado a su cónyuge. Si no tiene cónyuge, no es necesario agregar nada.</p>
+      <app-family-information></app-family-information>
+      
+      <h5>Referencias Familiares y Personales</h5>
+      <p>Por favor, agregue o asegúrese de tener al menos una referencia familiar y una referencia personal.</p>
+      <app-recommendation></app-recommendation>
+
+      <button class="btn btn-primary m-3" (click)="nextSection()">
+        Siguiente
+      </button>
+    </div>
+    
+    
+    <!-- Section 2 -->
+    <div *ngIf="isSectionVisible(1)">
       <input type="hidden" formControlName="id" />
       <h5>Información Personal</h5>
       <div class="card">
@@ -72,6 +90,7 @@
           </div>
         </div>
       </div>
+
       <h5 class="mt-3">Información de Nacimiento</h5>
       <div class="card">
         <div class="card-body">
@@ -144,6 +163,14 @@
           </div>
         </div>
       </div>
+      <button class="btn btn-primary m-1" (click)="prevSection()">Atrás</button>
+      <button class="btn btn-primary m-1" (click)="nextSection()">
+        Siguiente
+      </button>
+    </div>
+
+    <!-- Section 3 -->
+    <div *ngIf="isSectionVisible(2)">
       <h5 class="mt-3">Información de Residencia</h5>
       <div class="card">
         <div class="card-body">
@@ -175,16 +202,16 @@
               </select>
             </div>
             <!--<div class="col-md-6">
-                    <label for="idZonaResidencia" class="form-label"
-                      >Zona de residencia</label
-                    >
-                    <select class="form-select" formControlName="idZonaResidencia">
-                      <option value="" selected>Seleccione...</option>
-                      <option *ngFor="let type of zones" [value]="type.id">
-                        {{ type.nombre }}
-                      </option>
-                    </select>
-                  </div>-->
+                  <label for="idZonaResidencia" class="form-label"
+                    >Zona de residencia</label
+                  >
+                  <select class="form-select" formControlName="idZonaResidencia">
+                    <option value="" selected>Seleccione...</option>
+                    <option *ngFor="let type of zones" [value]="type.id">
+                      {{ type.nombre }}
+                    </option>
+                  </select>
+                </div>-->
             <div class="col-md-6">
               <label for="idTipoVivienda" class="form-label"
                 >Tipo de vivienda de residencia</label
@@ -231,6 +258,7 @@
           </div>
         </div>
       </div>
+
       <h5 class="mt-3">Información Familiar</h5>
       <div class="card">
         <div class="card-body">
@@ -256,24 +284,32 @@
               />
             </div>
             <!-- <div class="col-md-6">
-                    <label for="tieneHijos" class="form-label">¿Tiene hijos?</label>
-                    <select class="form-select" formControlName="tieneHijos">
-                      <option value="" selected>Seleccione...</option>
-                      <option value="SI">Sí</option>
-                      <option value="NO">No</option>
-                    </select>
-                  </div> -->
+                  <label for="tieneHijos" class="form-label">¿Tiene hijos?</label>
+                  <select class="form-select" formControlName="tieneHijos">
+                    <option value="" selected>Seleccione...</option>
+                    <option value="SI">Sí</option>
+                    <option value="NO">No</option>
+                  </select>
+                </div> -->
             <!-- <div class="col-md-6">
-                    <label for="numeroHijos" class="form-label">Número de hijos</label>
-                    <input
-                      formControlName="numeroHijos"
-                      type="number"
-                      class="form-control"
-                    />
-                  </div> -->
+                  <label for="numeroHijos" class="form-label">Número de hijos</label>
+                  <input
+                    formControlName="numeroHijos"
+                    type="number"
+                    class="form-control"
+                  />
+                </div> -->
           </div>
         </div>
       </div>
+      <button class="btn btn-primary m-1" (click)="prevSection()">Atrás</button>
+      <button class="btn btn-primary m-1" (click)="nextSection()">
+        Siguiente
+      </button>
+    </div>
+
+    <!-- Section 4 -->
+    <div *ngIf="isSectionVisible(3)">
       <h5 class="mt-3">Contacto</h5>
       <div class="card">
         <div class="card-body">
@@ -325,6 +361,7 @@
           </div>
         </div>
       </div>
+
       <h5 class="mt-3">Información Educativa y Laboral</h5>
       <div class="card">
         <div class="card-body">
@@ -341,30 +378,30 @@
               </select>
             </div>
             <!-- <div class="col-md-6">
-                    <label for="profesion" class="form-label">Profesión</label>
-                    <input formControlName="profesion" type="text" class="form-control" />
-                  </div> -->
+                  <label for="profesion" class="form-label">Profesión</label>
+                  <input formControlName="profesion" type="text" class="form-control" />
+                </div> -->
             <!-- <div class="col-md-6">
-                    <label for="ocupacionOficio" class="form-label"
-                      >Ocupación u oficio</label
-                    >
-                    <input
-                      formControlName="ocupacionOficio"
-                      type="text"
-                      class="form-control"
-                    />
-                  </div> -->
+                  <label for="ocupacionOficio" class="form-label"
+                    >Ocupación u oficio</label
+                  >
+                  <input
+                    formControlName="ocupacionOficio"
+                    type="text"
+                    class="form-control"
+                  />
+                </div> -->
             <!-- <div class="col-md-6">
-                    <label for="idEmpresaLabor" class="form-label"
-                      >Empresa donde labora</label
-                    >
-                    <select class="form-select" formControlName="idEmpresaLabor">
-                      <option value="" selected>Seleccione...</option>
-                      <option *ngFor="let type of companies" [value]="type.id">
-                        {{ type.nombre }}
-                      </option>
-                    </select>
-                  </div> -->
+                  <label for="idEmpresaLabor" class="form-label"
+                    >Empresa donde labora</label
+                  >
+                  <select class="form-select" formControlName="idEmpresaLabor">
+                    <option value="" selected>Seleccione...</option>
+                    <option *ngFor="let type of companies" [value]="type.id">
+                      {{ type.nombre }}
+                    </option>
+                  </select>
+                </div> -->
             <div class="col-md-6">
               <label for="idTipoContrato" class="form-label"
                 >Tipo de contrato</label
@@ -387,13 +424,13 @@
               />
             </div>
             <!-- <div class="col-md-6">
-                    <label for="cargoOcupa" class="form-label">Cargo que ocupa</label>
-                    <input
-                      formControlName="cargoOcupa"
-                      type="text"
-                      class="form-control"
-                    />
-                  </div> -->
+                  <label for="cargoOcupa" class="form-label">Cargo que ocupa</label>
+                  <input
+                    formControlName="cargoOcupa"
+                    type="text"
+                    class="form-control"
+                  />
+                </div> -->
             <div class="col-md-6">
               <label for="jefeInmediato" class="form-label"
                 >Nombre del jefe inmediato</label
@@ -415,9 +452,9 @@
               />
             </div>
             <!--<div class="col-md-6">
-                    <label for="mesesAntigEmpresa" class="form-label">Meses de antigüedad en la empresa</label>
-                    <input formControlName="mesesAntigEmpresa" type="number" class="form-control" />
-                  </div>-->
+                  <label for="mesesAntigEmpresa" class="form-label">Meses de antigüedad en la empresa</label>
+                  <input formControlName="mesesAntigEmpresa" type="number" class="form-control" />
+                </div>-->
             <div class="col-md-6">
               <label for="mesSaleVacaciones" class="form-label"
                 >Mes en el que sale a vacaciones</label
@@ -431,54 +468,59 @@
           </div>
         </div>
       </div>
-      <!-- <h5 class="mt-3">Información de Emergencia</h5>
-            <div class="card">
-              <div class="card-body">
-                <div class="row g-3">
-                  <div class="col-md-6">
-                    <label for="nombreEmergencia" class="form-label"
-                      >Nombre completo</label
-                    >
-                    <input
-                      formControlName="nombreEmergencia"
-                      type="text"
-                      class="form-control"
-                    />
-                  </div>
-                  <div class="col-md-6">
-                    <label for="numeroCedulaEmergencia" class="form-label"
-                      >Número de documento</label
-                    >
-                    <input
-                      formControlName="numeroCedulaEmergencia"
-                      type="text"
-                      class="form-control"
-                    />
-                  </div>
-                  <div class="col-md-6">
-                    <label for="numeroCelularEmergencia" class="form-label"
-                      >Número de celular</label
-                    >
-                    <input
-                      formControlName="numeroCelularEmergencia"
-                      type="text"
-                      minlength="7"
-                      maxlength="10"
-                      class="form-control"
-                    />
-                  </div>
+
+      <p>Para solicitar un crédito, primero asegúrese de presionar el botón de "Guardar" si ha realizado alguna edición o actualización en cualquier campo. Esto es importante porque la información actualizada será utilizada para el estudio de su solicitud de crédito. Luego, proceda a solicitar el crédito.</p>
+
+      <button class="btn btn-primary m-1" (click)="prevSection()">Atrás</button>
+      <button
+        class="btn btn-success m-1"
+        [disabled]="infoForm.invalid"
+        type="submit"
+      >
+        Guardar
+      </button>
+      
+      <app-request-credit></app-request-credit>
+    </div>
+
+    <!-- <h5 class="mt-3">Información de Emergencia</h5>
+          <div class="card">
+            <div class="card-body">
+              <div class="row g-3">
+                <div class="col-md-6">
+                  <label for="nombreEmergencia" class="form-label"
+                    >Nombre completo</label
+                  >
+                  <input
+                    formControlName="nombreEmergencia"
+                    type="text"
+                    class="form-control"
+                  />
+                </div>
+                <div class="col-md-6">
+                  <label for="numeroCedulaEmergencia" class="form-label"
+                    >Número de documento</label
+                  >
+                  <input
+                    formControlName="numeroCedulaEmergencia"
+                    type="text"
+                    class="form-control"
+                  />
+                </div>
+                <div class="col-md-6">
+                  <label for="numeroCelularEmergencia" class="form-label"
+                    >Número de celular</label
+                  >
+                  <input
+                    formControlName="numeroCelularEmergencia"
+                    type="text"
+                    minlength="7"
+                    maxlength="10"
+                    class="form-control"
+                  />
                 </div>
               </div>
-            </div> -->
-      <div class="d-grid gap-2 mt-3">
-        <button
-          class="btn btn-primary"
-          [disabled]="infoForm.invalid"
-          type="submit"
-        >
-          Guardar
-        </button>
-      </div>
-    </form>
-  </div>
+            </div>
+          </div> -->
+  </form>
 </div>
