--- a/front/src/app/components/private/user/request/request-credit/request-credit.component.html
+++ b/front/src/app/components/private/user/request/request-credit/request-credit.component.html
@@ -1,8 +1,6 @@
 <p-toast></p-toast>
-<div class="container mt-5">
-  <h1>Solicitar crédito</h1>
-  <app-info-request-credit></app-info-request-credit>
-  <div class="card">
+  <h5 class="mt-3">Solicitud de Crédito</h5>
+  <div class="card mb-5">
     <div class="card-body">
       <form class="row g-3" [formGroup]="creditForm" (ngSubmit)="onSubmit()">
         <div class="col-md-12">
@@ -111,4 +109,4 @@
       </div>
     </div>
   </div>
-</div>
+
